tests/baselines/reference/undeclaredVarEmit.errors.txt
==== tests/cases/compiler/undeclaredVarEmit.ts (1 errors) ====
    f: number;
       ~~~~~~
!!! error TS2304: Cannot find name 'number'.